us 1: Start frontend

--- a/frontend-web/EditorialAngular/src/app/pages/post-overview/post-overview.component.html
+++ b/frontend-web/EditorialAngular/src/app/pages/post-overview/post-overview.component.html
@@ -1,5 +1,5 @@
 <div class="post-overview"> 
-  <h1 class="overview-title">Post Overview</h1>
+  <h1 class="overview-title">Published posts</h1>
 
   <app-post-filter (filterChanged)="applyFilters($event)"></app-post-filter>
   
