--- a/frontend-web/EditorialAngular/src/app/pages/create-post/create-post.component.html
+++ b/frontend-web/EditorialAngular/src/app/pages/create-post/create-post.component.html
@@ -1,1 +1,25 @@
-<p>create-post works!</p>
+<div class="create-post-container">
+    <h1>Create a new post</h1>
+    <form #postForm="ngForm">
+
+        <div class="form-group">
+            <label for="title">Title</label>
+            <input type="text" id="title" name="title" [(ngModel)]="postRequest.title" required />
+        </div>
+
+        <div class="form-group">
+            <label for="content">Content</label>
+            <textarea id="content" name="content" [(ngModel)]="postRequest.content" required></textarea>
+        </div>
+
+        <div class="form-group">
+            <label for="author">Author</label>
+            <input type="text" id="author" name="author" [(ngModel)]="postRequest.author" required />
+        </div>
+
+        <div class="button-group">
+            <button type="button" (click)="saveAsConcept()">Save as Concept</button>
+            <button type="submit" (click)="sendToReview()">Send to Review</button>
+        </div>
+    </form>
+</div>
