--- a/frontend-web/EditorialAngular/src/app/components/navbar/navbar.component.html
+++ b/frontend-web/EditorialAngular/src/app/components/navbar/navbar.component.html
@@ -2,5 +2,7 @@
     <div class="container">
       <a routerLink="/">Home</a>
       <a routerLink="/create">Create Post</a>
+      <a routerLink="/all-posts">Edit Posts</a>
+      <a routerLink="/review">Review Posts</a>
     </div>
 </nav>
