--- a/frontend-web/EditorialAngular/src/app/pages/post-overview/post-overview.component.html
+++ b/frontend-web/EditorialAngular/src/app/pages/post-overview/post-overview.component.html
@@ -6,7 +6,10 @@
   <div class="post-grid">
     @if (posts.length > 0) {
       @for (post of filteredPosts; track post.title) {
-        <app-post-item [post]="post" class="post-item"></app-post-item>
+        <div class="post-container">
+          <app-post-item [post]="post" class="post-item"></app-post-item>
+          <app-post-item-buttons [postId]="post.id"></app-post-item-buttons>
+        </div>
       }
     }
     @else {
