--- a/frontend-web/EditorialAngular/src/app/components/post-item-buttons/post-item-buttons.component.css
+++ b/frontend-web/EditorialAngular/src/app/components/post-item-buttons/post-item-buttons.component.css
@@ -1,8 +1,10 @@
 .post-item-buttons {
     margin-top: 10px;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    flex-wrap: wrap;
     gap: 10px;
+    align-items: center;
 }
 
 .comment-btn,
@@ -12,6 +14,7 @@
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    width: calc(50% - 5px);
 }
 
 .comment-btn {
@@ -46,6 +49,7 @@
     background-color: #f8f8f8;
     padding: 10px;
     border-radius: 5px;
+    width: 100%;
 }
 
 .comment-item {
