--- a/frontend-web/EditorialAngular/src/app/components/navbar/navbar.component.html
+++ b/frontend-web/EditorialAngular/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,7 @@
 <nav class="navbar">
     <div class="container">
-      <a routerLink="/">Home</a>
+      <a routerLink="/">Login</a>
+      <a routerLink="/published-posts">Home</a>
       <a routerLink="/create">Create Post</a>
       <a routerLink="/all-posts">Edit Posts</a>
       <a routerLink="/review">Review Posts</a>
