--- a/frontend-web/EditorialAngular/src/app/components/post-item-buttons/post-item-buttons.component.html
+++ b/frontend-web/EditorialAngular/src/app/components/post-item-buttons/post-item-buttons.component.html
@@ -20,7 +20,7 @@
             <div class="comment-item">
                 <p>{{ comment.content }} - <i>{{ comment.author }}</i></p>
                 <button (click)="editComment(comment)">✏️</button>
-                <button (click)="deleteComment(comment.id)">🗑️</button>
+                <button (click)="deleteComment(comment)">🗑️</button>
             </div>
             }
         </div>
