--- a/frontend-web/EditorialAngular/src/app/pages/edit-post/edit-post.component.html
+++ b/frontend-web/EditorialAngular/src/app/pages/edit-post/edit-post.component.html
@@ -1,3 +1,6 @@
+@if (isAuthorized() === false) {
+  <p class="no-posts">Unauthorized</p>
+}
 <div class="edit-post-container">
     <h1 class="edit-post-title">Edit Post</h1>
   
