--- a/frontend-web/EditorialAngular/src/app/components/post-item/post-item.component.html
+++ b/frontend-web/EditorialAngular/src/app/components/post-item/post-item.component.html
@@ -3,6 +3,6 @@
     <p class="post-content">{{ post.content }}</p>
     <div class="post-meta">
         <p class="post-author">By: {{ post.author }}</p>
-        <p>{{ post.dateCreated }}</p>
+        <p>{{ formattedDate }}</p>
     </div>
 </div>
