Use tailwind instead of own css

--- a/frontend-web/EditorialAngular/src/app/components/navbar/navbar.component.html
+++ b/frontend-web/EditorialAngular/src/app/components/navbar/navbar.component.html
@@ -1,9 +1,11 @@
-<nav class="navbar">
-    <div class="container">
-      <a routerLink="/">Login</a>
-      <a routerLink="/published-posts">Home</a>
-      <a routerLink="/create">Create Post</a>
-      <a routerLink="/all-posts">Edit Posts</a>
-      <a routerLink="/review">Review Posts</a>
+<nav class="bg-gray-800 text-white">
+  <div class="container mx-auto px-4 py-3 flex justify-between items-center">
+    <div class="flex space-x-4">
+      <a routerLink="/" class="text-white hover:text-gray-300 font-medium">Login</a>
+      <a routerLink="/published-posts" class="text-white hover:text-gray-300 font-medium">Home</a>
+      <a routerLink="/create" class="text-white hover:text-gray-300 font-medium">Create Post</a>
+      <a routerLink="/all-posts" class="text-white hover:text-gray-300 font-medium">Edit Posts</a>
+      <a routerLink="/review" class="text-white hover:text-gray-300 font-medium">Review Posts</a>
     </div>
+  </div>
 </nav>
