--- a/frontend-web/EditorialAngular/src/app/components/post-filter/post-filter.component.css
+++ b/frontend-web/EditorialAngular/src/app/components/post-filter/post-filter.component.css
@@ -1,4 +1,4 @@
-.filter-section {
+/* .filter-section {
     display: flex;
     gap: 15px;
     justify-content: center;
@@ -40,4 +40,4 @@
     .filter-section input, .clear-button {
         width: 100%;
     }
-}
+} */
