--- a/frontend-web/EditorialAngular/src/app/components/review-buttons/review-buttons.component.css
+++ b/frontend-web/EditorialAngular/src/app/components/review-buttons/review-buttons.component.css
@@ -1,4 +1,4 @@
-.approve-btn {
+/* .approve-btn {
     background-color: green;
     color: white;
     margin-right: 10px;
@@ -67,4 +67,4 @@ button[type="submit"] {
 
 button[type="submit"]:hover {
     background-color: #0056b3;
-}
+} */
