--- a/frontend-web/EditorialAngular/src/app/pages/login/login.component.css
+++ b/frontend-web/EditorialAngular/src/app/pages/login/login.component.css
@@ -1,4 +1,4 @@
-.login-container {
+/* .login-container {
     width: 100%;
     max-width: 400px;
     margin: 100px auto;
@@ -90,4 +90,4 @@
     .login-button {
         font-size: 14px;
     }
-}
+} */
