--- a/frontend-web/EditorialAngular/src/app/components/navbar/navbar.component.css
+++ b/frontend-web/EditorialAngular/src/app/components/navbar/navbar.component.css
@@ -1,4 +1,4 @@
-.navbar {
+/* .navbar {
     background-color: #333;
     color: white;
     padding: 10px 20px;
@@ -14,4 +14,4 @@ a {
     padding: 5px;
     color: white;
     text-decoration: none;
-}
+} */
