--- a/frontend-web/EditorialAngular/src/app/components/post-item/post-item.component.css
+++ b/frontend-web/EditorialAngular/src/app/components/post-item/post-item.component.css
@@ -1,4 +1,4 @@
-.post-card {
+/* .post-card {
     background-color: #fff;
     border: 1px solid #ddd;
     border-radius: 8px;
@@ -38,4 +38,4 @@
 .post-author {
     font-weight: bold;
     color: #444;
-}
+} */
