--- a/frontend-web/EditorialAngular/src/app/pages/create-post/create-post.component.css
+++ b/frontend-web/EditorialAngular/src/app/pages/create-post/create-post.component.css
@@ -1,4 +1,4 @@
-.create-post-container {
+/* .create-post-container {
     width: 100%;
     max-width: 600px;
     margin: 0 auto;
@@ -40,4 +40,4 @@ button:hover {
     color: #777;
     text-align: center;
     margin-top: 20px;
-}
+} */
